[project]
name = "downloads"
version = "0.1.0"
description = "\"\""
authors = [
    {name = "Abdullah-alrawi2002",email = "aalrawi767@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.10.5,<3.0.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "huggingface-hub (>=0.27.1,<0.28.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
